feat: add more podcasts and tool filters
